# qr-client

./: 69-qrpmx.rules  Makefile  README.md  config.h  config.status  configure.ac  libtool
src/: Makefile  Makefile.am  cgenerator  cgenerator.8  cgenerator.c  cgenerator.h  usb_set.c  usb_set.h  web_serv.c  web_serv.h
src/.deps/: cgenerator-cgenerator.Po  cgenerator-log.Po  cgenerator-usb_set.Po  cgenerator-web_serv.Po
